plugins {
    id 'java'
    id 'java-library'
    id 'io.freefair.lombok' version '8.13.1'
}

group = 'exchange.core2'
version = '0.6.0-SNAPSHOT'
description = 'High performance market exchange core'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Основные зависимости
    implementation 'net.java.dev.jna:jna-platform:5.17.0'
    implementation 'net.java.dev.jna:jna:5.17.0'
    implementation 'exchange.core2:collections:0.5.1'
    implementation 'com.lmax:disruptor:4.0.0'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'net.openhft:affinity:3.27ea1'
    implementation 'net.openhft:chronicle-wire:2.27ea9'
    implementation 'org.agrona:agrona:2.2.4'
    implementation 'org.eclipse.collections:eclipse-collections-api:13.0.0'
    implementation 'org.eclipse.collections:eclipse-collections:13.0.0'
    implementation 'org.lz4:lz4-java:1.8.0'
    compileOnly 'org.jetbrains:annotations:26.0.2'


    // Тестовые зависимости
    testImplementation 'com.paritytrading.juncture:juncture-nasdaq:1.0.0'
    testImplementation 'com.paritytrading.nassau:nassau-util:1.0.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
    testImplementation 'org.hdrhistogram:HdrHistogram:2.1.12'
    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
    testImplementation 'com.google.guava:guava:31.1-jre'
    testImplementation 'org.apache.commons:commons-lang3:3.12.0'
    testImplementation 'org.apache.commons:commons-math3:3.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.mockito:mockito-core:4.5.1'
    testImplementation 'org.hamcrest:hamcrest-library:1.3'
    //testImplementation 'io.cucumber:cucumber-java8:7.2.3'
    testImplementation 'io.cucumber:cucumber-java:7.27.2'
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.27.2'
    testImplementation 'org.junit.platform:junit-platform-suite:1.13.4'
    testImplementation 'io.cucumber:cucumber-picocontainer:7.27.2'
    testCompileOnly 'org.jetbrains:annotations:26.0.2' // Для тестов
}

java {
    withSourcesJar()
//    withJavadocJar()
}

test {
    useJUnitPlatform()
    exclude '**/remote/**'
    exclude '**/stress/**'
    exclude '**/*Remote*Test*'
    exclude '**/*Stress*Test*'
    exclude '**/*Stress*Test*'
    exclude '**/IT*.java'
    exclude '**/*Perf*'
    exclude '**/nasdaq/**'
    maxParallelForks = 1

//    jvmArgs = [
//            "--add-opens=java.base/java.lang=ALL-UNNAMED",
//            "--add-opens=java.base/java.nio=ALL-UNNAMED",
//            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
//            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
//            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
//            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
//            "--add-opens=java.base/java.lang=ALL-UNNAMED",
//            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
//            "--add-opens=java.base/java.io=ALL-UNNAMED",
//            "--add-opens=java.base/java.util=ALL-UNNAMED"
//    ]
}

task integrationTest(type: Test) {
    useJUnitPlatform()
    include '**/IT*.java'
    include '**/*IntegrationTest.java'
    shouldRunAfter test
    maxParallelForks = 1
//    jvmArgs = [
//            "--add-opens=java.base/java.lang=ALL-UNNAMED",
//            "--add-opens=java.base/java.nio=ALL-UNNAMED",
//            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
//            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
//            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
//            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
//            "--add-opens=java.base/java.lang=ALL-UNNAMED",
//            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
//            "--add-opens=java.base/java.io=ALL-UNNAMED",
//            "--add-opens=java.base/java.util=ALL-UNNAMED"
//    ]
}
